<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                style="?android:borderlessButtonStyle"
                android:id="@+id/bt_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_reset_text"/>
            <Button
                android:id="@+id/bt_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/button_start_text"
                tools:ignore="ButtonStyle"/>
            <Button
                android:id="@+id/bt_lap"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_lap_text"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_buttons">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/circle"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                tools:text="0:00:00"/>
        </RelativeLayout>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
